# psu

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
src/: app.rs  cli.rs  conf.rs  config.rs  lib.rs  main.rs  password.rs  run.rs  ui.rs
tests/: integration_test.rs
