[package]
name = "psu"
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["IwantHappiness"]
description = "Password storage utility."

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dependencies]
anyhow = "1.0.100"
clipboard = "0.5.0"
color-eyre = "0.6.5"
crossterm = "0.28.1"
csv = "1.3.1"
directories = "6.0.0"
ratatui = { version = "0.29.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
tui-input = { version = "0.14.0", features = ["serde"] }
unicode-width = "0.2.0"
