[package]
name = "psu"
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["IwantHappiness"]
description = "Password storage utility."

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dependencies]
csv = "1.4.0"
dirs = "6.0.0"
toml = "0.9.8"
anyhow = "1.0.100"
clipboard = "0.5.0"
color-eyre = "0.6.5"
crossterm = "0.28.1"
unicode-width = "0.2.0"
ratatui = { version = "0.29.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tui-input = { version = "0.14.0", features = ["serde"] }
config = "0.15.19"
